Removed redundant examples.  Ack DARPA.
git-svn-id: svn://svn.code.sf.net/p/x10/code@4100 a326200e-df2c-42e0-81fa-597e909af41d

--- a/trunk/x10.man/paper/paper.tex
+++ b/trunk/x10.man/paper/paper.tex
@@ -110,14 +110,18 @@ Igor Peshansky,
 Lex Spoon,
 Vincent Cave.
 
+This material is based upon work supported by the Defense
+Advanced Research Projects Agency under its Agreement No.
+HR0011-07-9-0002.
+
 
 \bibliographystyle{plain}
 \bibliography{master}
 \balance
-\appendix
-\onecolumn
+% \appendix
+% \onecolumn
 
-\section{An extended example}
-\input{longex}
+% \section{An extended example}
+% \input{longex}
 
 \end{document}
