Moved examples to own files.  Working on information-flow example.
git-svn-id: svn://svn.code.sf.net/p/x10/code@4104 a326200e-df2c-42e0-81fa-597e909af41d

--- a/trunk/x10.man/paper/master.bib
+++ b/trunk/x10.man/paper/master.bib
@@ -2544,3 +2544,78 @@ year = 1993
   pages = "203--217",
   year = 1997
 }
+
+@misc{jsr308,
+	Title = {{JSR} 308: Annotations on {Java} Types},
+        Key = {JSR308},
+	Howpublished = {\texttt{http://jcp.org/en/jsr/detail?id=308}}}
+
+@inproceedings{javacop-oopsla06,
+  author = "Chris Andreae and James Noble and Shane Markstrum and Todd Millstein",
+  title = "A Framework for implementing pluggable type systems",
+  year = 2006,
+  booktitle = oopsla06,
+  city = "Portland, Oregon, USA",
+  month = oct
+}
+
+@inproceedings{bracha04-pluggable,
+  title = "Pluggable Type Systems",
+  author = "Gilad Bracha",
+  booktitle = "{OOPSLA}'04 Workshop on Revival of Dynamic Languages",
+  year = 2004,
+  month = oct,
+  location = "Vancouver, BC, Canada"
+}
+
+@inproceedings{chin05-qualifiers,
+  author = "Brian Chin and Shane Markstrum and Todd Millstein",
+  title = "Semantic type qualifiers",
+  booktitle = pldi05,
+  year = 2005,
+  pages = "85--95",
+  location = "Chicago, Illinois, USA"
+}
+
+@inproceedings{manson05-memory-model,
+  title = "The {Java} Memory Model",
+  author = "Jeremy Manson and William Pugh and Sarita V. Adve",
+  booktitle = popl05,
+  year = 2005,
+  month = jan,
+  location = {Long Beach, CA, USA}
+}
+
+@article{pugh00-memory-model,
+  title = "The {Java} memory model is fatally flawed",
+  author = "William Pugh",
+  journal = "Concurrency---Practice and Experience",
+  year = 2000,
+  month = may,
+  volume = 12,
+  number = 6,
+  pages = "445--455"
+}
+
+@article{openmp,
+  title = "{OpenMP}: An industry standard {API} for shared-memory programming",
+  author = "L. Dagum and R. Menon",
+  journal = "{IEEE} Computational Science and Engineering",
+  volume = 5,
+  number = 1,
+  pages = "46--55",
+  year  = 1998,
+  month = jan
+}
+
+@article{bruce-binary,
+  author = "Kim B. Bruce and Luca Cardelli and Giuseppe Castagna and Jonathan Eifrig and Scott F. Smith and Valery Trifonov and Gary T. Leavens and Benjamin C. Pierce",
+  title = "On Binary Methods",
+  journal = "Theory and Practice of Object Systems",
+  number = 3,
+  volume = 1,
+  pages = "221--242",
+  month = "Fall",
+  year = 1995
+}
+
