--- a/trunk/x10.man/paper/examples.tex
+++ b/trunk/x10.man/paper/examples.tex
@@ -58,10 +58,7 @@ Constraints naturally permit the expression of existential types:
 
 \subsection{Binary methods}
 
-The binary method problem \cite{bruce}.
-
-Bruce and Cardelli and Castagna and Leavens and Pierce,
-On Binary Methods, TAPOS 1(3): 221--242, Fall 1995.
+The binary method problem \cite{bruce-binary}.
 
 {\footnotesize
 \begin{verbatim}
@@ -88,10 +85,7 @@ class IntSet implements Set {
 }
 \end{verbatim}}
 
-\subsection{Cayenne examples}
-
-
-\subsection{DML examples}
+\subsection{AVL trees}
 
 {\footnotesize
 \begin{verbatim}
@@ -103,7 +97,7 @@ class Node(Object key, AVLList l, AVLList r
 \end{verbatim}}
 
 
-Red/black tree invariant.
+\subsection{Red--black trees}
 
 Invariant:
 1. all leaves black
@@ -113,72 +107,96 @@ every path from n to a leaf (the black height)
 
 \begin{verbatim}
 class Tree(boolean isBlack, int blackHeight, Tree left, Tree right
-  : ( left == null && right == null ||   // leaf or interior
-      left != null && right != null
-    )
-    &&
-    ( left == null || left.value < right.value )   // ordered
-    &&
-    ( left != null || isBlack )   // leaves are black
-    &&
-    ( left != null || blackHeight == 0 ) // leaves have height 0
-    &&
-    ( left == null || blackHeight == left.blackHeight + 1 )
-    &&
-    ( right == null || blackHeight == right.blackHeight + 1 )
-    &&
-    ( isBlack || ( left.isBlack && right.isBlack ) )
+  : ( left == null && right == null || left != null && right != null )
+ && ( left == null || left.value < right.value )
+ && ( left != null || isBlack )
+ && ( left != null || blackHeight == 0 )
+ && ( ! isBlack || left == null || blackHeight == left.blackHeight + 1 )
+ && ( ! isBlack || right == null || blackHeight == right.blackHeight + 1 )
+ && ( isBlack || ( left.isBlack && right.isBlack ) )
   )
 {
-    int value;
+  int value;
 
-    // empty
-    Tree(: isBlack && blackHeight == 0 && left == null && right == null)
-        () {
-        property(isBlack, 0, null, null);
-    }
+  // empty
+  Tree(: isBlack && blackHeight == 0 && left == null && right == null)
+      () {
+    property(isBlack, 0, null, null);
+  }
 
-    // black
-    Tree(: isBlack && blackHeight == l.blackHeight+1 && left == l && right == r)
-        (Tree l, Tree r, int v : l.blackHeight == r.blackHeight) {
-        property(true, l.blackHeight+1, l, r);
-        this.value = v;
-    }
-       
-    // red: use a dummy argument to overload
-    Tree(: !isBlack && blackHeight == l.blackHeight && left == l && right == r)
-        (Tree l, Tree r, int v, Object _ : l.blackHeight == r.blackHeight) {
-        property(false, l.blackHeight, l, r);
-        this.value = v;
-    }
+  // black
+  Tree(: isBlack && blackHeight == l.blackHeight+1 && left == l && right == r)
+      (Tree l, Tree r, int v : l.blackHeight == r.blackHeight) {
+    property(true, l.blackHeight+1, l, r);
+    this.value = v;
+  }
+      
+  // red: use a dummy argument to overload
+  Tree(: !isBlack && blackHeight == l.blackHeight && left == l && right == r)
+      (Tree l, Tree r, int v, Object _ : l.blackHeight == r.blackHeight) {
+    property(false, l.blackHeight, l, r);
+    this.value = v;
+  }
 
-    // need to show add, remove preserve the invariant
+  // need to show add, remove preserve the invariant
 }
 \end{verbatim}
 
-Bounds checks.
+\subsection{Bounds checks}
 
-\begin{code}
-class Array \{
+\begin{verbatim}
+class Array {
     T[] a;
-    T get(int(:0 <= self \&\& self < a.length) i) \{ return a[i]; \}
-    void set(int(:0 <= self \&\& self < a.length) i, T v) \{ a[i] = v; \}
-\}
-\end{code}
+    T get(int(:0 <= self && self < a.length) i) { return a[i]; }
+    void set(int(:0 <= self && self < a.length) i, T v) { a[i] = v; }
+}
+\end{verbatim}
 
 \subsection{Nullable types}
 
 Nullable types (T(:self != null))
 
-\subsection{Arrays}
 
-Array/region/distribution types (examples from X10)
+\subsection{A distributed binary tree}
 
-\cite{gps06-arrays}
+\begin{figure}
+\input{tree}
+\end{figure}
 
 \subsection{Places}
 
-Place types (examples from X10)
+\begin{figure}
+\input{place}
+\end{figure}
+
+\subsection{$k$-dimensional regions}
+
+\begin{figure}
+\input{region}
+\end{figure}
+
+\subsection{Point}
+
+\begin{figure}
+\input{point}
+\end{figure}
+
+\subsection{Distribution}
+
+\begin{figure}
+\input{dist}
+\end{figure}
+
+\subsection{Arrays}
+
+\cite{gps06-arrays}
+
+Finally we can now define arrays. An array is built over a
+distribution and a base type.
+
+\begin{figure}
+\input{array}
+\end{figure}
 
 \subsection{Clocks}
 
