--- a/trunk/x10.man/paper/semantics.tex
+++ b/trunk/x10.man/paper/semantics.tex
@@ -18,19 +18,7 @@
 
 \begin{figure*}
 
-\paragraph{Syntax.} 
-The syntax for the language is specified as follows. 
-
-We assume a fixed constraint system, $\cal C$, with inference relation
-$\vdash_{\cal C}$. All constraint systems are required to support the
-trivial constraint \true, conjunction, existential quantification and
-equality on constraint terms. Constraint terms include (final)
-variables, the special variable {\tt self} (which may occur only in
-constraints {\tt c} which occur in a constrained type {\tt C(:c)}),
-and field selections {\tt t.f}. Finally, we assume that constraints
-are closed under variable substitution. We denote the application of
-the substitution $[\bar{t}/\bar{x}]$ to a constraint $c$ by
-$c[\bar{t}/\bar{x}]$.
+\paragraph{Syntax.} The rules for CFJ are:
 
 \begin{tabular}{rrcl}
 &&&\\
@@ -73,16 +61,16 @@ $$
 \begin{array}{ll}
 \axname{T-Var}
 \axiom{\Gamma, {\tt T}\ {\tt x} \vdash {\tt T}\ {\tt x}} \\ & \\
-\rname{T-Inv}
-\from{\Gamma \vdash {\tt C(:c)\ x} \ \ \ \ {\tt d}=inv (C)}
-\infer{\Gamma \vdash {\tt C(:c,d[\self/\this])\ x}}  &  
 \rname{T-Constr}
 \from{\Gamma \vdash {\tt C(:c)\ x} \ \ \ \sigma(\Gamma), {\tt c}[{\tt x}/\self] \vdash_{\cal C}{\tt d[x/\self]}}
-\infer{\Gamma \vdash {\tt C(:d)\ x}} 
+\infer{\Gamma \vdash {\tt C(:d)\ x}} &
+\rname{T-Inv}
+\from{\Gamma, {\tt c}[{\tt x}/\this] \vdash {\tt C(:d)\ x} \ \ \ \ {\tt c}=inv (C)}
+\infer{\Gamma \vdash {\tt C(:d)\ x}}    
 \\ \quad \\
 \rname{T-Field}
-\from{\Gamma \vdash {\tt T}_0\ {\tt e} \ \ \ fields({\tt T}_0)= \bar{\tt U}(:\bar{\tt d}) \bar{\tt f} \ \ \ \mbox{({\tt o} fresh for $\Gamma,{\tt d}_i$)}}
-\infer{\Gamma \vdash {\tt U}_i(:{\tt T}_0\ {\tt o;o.f}=\self,{\tt d}_i)\, {\tt e.f}_i} 
+\from{\Gamma \vdash {\tt T}_0\ {\tt e} \ \ \ fields({\tt T}_0,{\tt o})= \bar{\tt U}(:\bar{\tt d}) \bar{\tt f} \ \ \ \mbox{({\tt o} fresh for $\Gamma,{\tt d}_i$)}}
+\infer{\Gamma \vdash {\tt U}_i(:{\tt T}_0\ {\tt o;o.f}_i=\self,{\tt d}_i)\, {\tt e.f}_i} 
 & 
 \axname{T-Cast}
 \axiom{\Gamma \vdash {\tt T\ (T) e}} \\
@@ -90,16 +78,16 @@ $$
 \rname{T-Invk}
 \from{\begin{array}{l}
 \Gamma \vdash {\tt T}_0 \ {\tt e}_0, \bar{\tt T}\ \bar{\tt e} \ \ \ \ 
-mtype({\tt T}_0,m)= \tt \bar{\tt Z}\ \bar{\tt z},c \rightarrow {\tt S(:d)} \\
-\Gamma, {\tt T}_0\ \tt o, \bar{\tt T} \ \bar{\tt z} \vdash c[o/\this], \bar{\tt T} \subtype \bar{\tt Z}[o/\this] \ \ \mbox {({\tt o} fresh for $\Gamma,
+mtype({\tt T}_0,{\tt m},{\tt o})= \tt \bar{\tt Z}\ \bar{\tt z}:c \rightarrow {\tt S(:d)} \\
+\Gamma, {\tt T}_0\ \tt o, \bar{\tt T} \ \bar{\tt z} \vdash c, \bar{\tt T} \subtype \bar{\tt Z}\ \ \mbox {({\tt o} fresh for $\Gamma,
 {\tt c},{\tt d}$)}
 \end{array}}
-\infer{\Gamma \vdash {\tt S(:T}_0\ {\tt o;\bar{\tt T}\ \bar{\tt z}; d[o/\this])}\ {\tt e}_0.{\tt m(\bar{\tt e})}}&
+\infer{\Gamma \vdash {\tt S(:T}_0\ {\tt o;\bar{\tt T}\ \bar{\tt z}; d)}\ {\tt e}_0.{\tt m(\bar{\tt e})}}&
 \rname{T-New}
 \from{
   \begin{array}{l}
     \Gamma \vdash \bar{\tt T}\ \bar{\tt e} \ \ \  
-    fields(C)=\bar{\tt Z}\ \bar{f} \ \ \ {\tt c}=\inv(C) \\
+    fields(C)=\bar{\tt Z}\ \bar{\tt f} \ \ \ {\tt c}=\inv({\tt C}) \\
     \Gamma, \bar{\tt T}\ \bar{\tt f} 
       \vdash {\tt c}[\bar{\tt f}/\this.\bar{\tt f}],\bar{\tt T} \subtype \bar{\tt Z}[\bar{\tt f}/\this.\bar{\tt f}]
   \end{array}
@@ -161,12 +149,113 @@ $$
 \caption{Reduction rules for Constrained FJ}\label{CFJ-red-rules}
 \end{figure*}
 
+\paragraph{Syntax.}
+The syntax for the language is specified in Figure~\ref{CFJ-red-rules}.
+
+We assume a fixed constraint system, $\cal C$, with inference relation
+$\vdash_{\cal C}$. All constraint systems are required to support the
+trivial constraint \true, conjunction, existential quantification and
+equality on constraint terms. Constraint terms include (final)
+variables, the special variable {\tt self} (which may occur only in
+constraints {\tt c} which occur in a constrained type {\tt C(:c)}),
+and field selections {\tt t.f}. Finally, we assume that constraints
+are closed under variable substitution. We denote the application of
+the substitution $[\bar{t}/\bar{x}]$ to a constraint $c$ by
+$c[\bar{t}/\bar{x}]$.
+
+A type declaration {\tt C(:c) x} constrains {\tt x} to contain
+references to only those objects {\tt o} that are instances of
+(subclasses of) {\tt C} and for which the constraint {\tt c} is true
+provided that occurrences of {\tt self} in {\tt c} are replaced by
+{\tt o}. Thus in the constraint {\tt c} of a constrained type {\tt
+C(:c)}, {\tt self} may be used to reference the object whose type is
+being specified. Note that {\tt self} is distinct from {\tt this} --
+{\tt this} is permitted to occur in the clause of a type {\tt T} only
+if {\tt T} occurs in an instance field declaration or instance method
+declaration of a class; as usual, \this{} is considered bound to the
+instance of the class to which the field or method declaration
+applies.
+
+A class declaration $\tt\class \ C(\bar{T}\ \bar{f}:c)\ \extends\ D(:d)\
+\{\bar{M}\}$ is thought of as declaring a class {\tt C} with the
+fields $\bar{\tt f}$ (of type $\bar{\tt T}$), a {\em declared class
+invariant} {\tt c}, a {\em super-class invariant} {\tt d} and a
+collection of methods $\bar{\tt M}$. The constraints {\tt c} and {\tt
+d} are true for all instances of the class {\tt C} (this is verified
+in the rule for type-checking constructors, T-New).  In these
+constraints, {\tt this} may be used to reference the current object;
+\self{} does not have any meaning and must not be used.
+
+A method declaration ${\tt T}_0\ {\tt m(\bar{\tt T}\ \bar{\tt x} :
+c)\{\ldots\}}$ specifies the type of the arguments and the result, as
+usual.  The method arguments $\bar{\tt x}$ may occur in the argument
+types $\bar{\tt T}$ and the return type ${\tt T}_0$.  The constraint
+{\tt c} specifies additional constraints on the arguments $\bar{\tt
+x}$ and
+\this{} that must hold for a method invocation to be legal. Note that
+\self{} does not make sense in {\tt c} (no type is being defined), and must not occur in {\tt c}.
+
+\paragraph{Type judgements.}
+
+$\sigma(\Gamma)$ is the set of constraints on the variables whose type
+assertions are specified by $\Gamma$, generated by replacing each type
+assertion {\tt C(:c) x} in $\Gamma$ with ${\tt c}[{\tt x}/\self]$.
+The rule T-Constr permits a type {\tt C(:c)} for a variable {\tt x} to
+be strengthened with information entailed per $\cal C$ from the
+information about {\tt x} and other variables specified in $\Gamma$.
+
+The rule T-Inv permits information about the class invariant {\tt c}
+of a class {\tt C} to be used when determining the constrained clause
+for a variable of type {\tt C}.
+
+In T-Field, we postulate the existence of a receiver object {\tt o} of
+the given static type (${\tt T}_0$). $fields({\tt T}_0,o)$ is
+the set of typed fields for ${\tt T}_0$ with all occurrences of 
+\this{} replaced  by {\tt o}. We record in the resulting
+constraint that ${\tt o.f}_i=\self$.\footnote{A new name {\tt o} is
+necessary to name this object since {\tt e} cannot be used. Arbitrary
+term expressions {\tt e} are not permitted in constraints; the
+functions used in {\tt e} may not be known to the constraint system,
+and {\tt e} may have side-effects.}  This permits transfer of
+information that may have been recorded in ${\tt T}_0$ about the field
+${\tt f}_i$. 
+
+Similarly, in T-Invk we postulate the existence of a receiver object
+{\tt o} of the given static type. For any type $T$, object {\tt o} of
+type $T$ and method name {\tt m}, let $mtype({\tt T},{\tt m},{\tt o})$
+be a copy of the signature of the method with \this{} replaced by {\tt
+o}. We establish (under the assumption that the formals ($\bar{\tt
+z}$) have the static type of the actuals
+)\footnote{This is stronger than assuming $\bar{\tt Z}$.}
+that actual types are
+subtypes of the formal types, and the method constraint is
+satisfied. This permits us to record the constraint {\tt d} on the
+return type, with the formal variables $\bar{\tt z}$ existentially
+quantified.\footnote{Recall that the $\bar{\tt z}$ may occur in {\tt
+d} but most not occur in a type in the calling environment; hence they
+must be existentially quantified in the resulting constraint.}
+
+In T-New, similarly, we establish that the static types of the actual
+arguments to the constructor are subtypes of the declared types of the
+field, and contain enough information to satisfy the class invariant,
+{\tt c}. The declared types (and {\tt c}) contain references to ${\tt
+this.\bar{\tt f}}$; these must be replaced by the formals $\bar{\tt
+f}$, which carry information about the static type of the
+actuals. Note that the object {\tt o} we hypothesized in an analogous
+situation in T-Invk does not exist; it will exist on successful
+invocation of the constructor. The constrained clause of the \new{}
+expression contains all the information that can be gleaned from the
+static types of the actuals by assigning them to the corresponding
+fields of the object being created.
+
+
 \begin{theorem}[Subject Reduction] 
 
 If $\Gamma \vdash T\ e$ and $e \derives e'$, then for some type $S$,
 $\Gamma \vdash S\ e'$ and $\Gamma \vdash S \subtype T$.
 
 \end{theorem}
+
 
 Let the normal form of expressions be given by {\em values},
 i.e. expressions 
