o modified the post.pl to compute variance o added yesterday's runs.
git-svn-id: svn://svn.code.sf.net/p/x10/code@4130 a326200e-df2c-42e0-81fa-597e909af41d

--- a/trunk/x10.apps/experiments/RandomAccess/README
+++ b/trunk/x10.apps/experiments/RandomAccess/README
@@ -3,13 +3,12 @@ To Install:
 
 1. untar hpcc-opt.tar.
 
-2. copy make.def.template to make.def
+2. Copy make.def.template to make.def
 
-3. Change the Include and Library path to suit your environment
+3. Edit make.def and change the Include and Library path to suit your environment
+   Change the compiler flags, if required (default -O3 -q64 -qarch=pwr5 -qtune=pwr5 is recommended)
 
-4. Change the compiler flags, if required (default -O3 -q64 -qarch=pwr5 -qtune=pwr5 is recommended)
-
-5. type "make".
+4. type "make".
 
 To run:
 =======
