--- a/trunk/x10.apps/experiments/RandomAccess/results/README
+++ b/trunk/x10.apps/experiments/RandomAccess/results/README
@@ -1,2 +1,2 @@
 Redirect the output from run.sh to a file in this directory. THe file naming convention is:
-    result.cluster_name.#nodes. Eg. result.v20.4
+    result.experiment_name.cluster_name.#nodes. Eg. result.all.v20.4 or result.mpi.v20.4 or result.x10c.v20.4
